# agentXPlatform

./: docker-compose.yaml  middleware.env
user-service/: .env  .env.example  Dockerfile  alembic.ini  app.py  pyproject.toml  requirements.txt
user-service/extensions/: ext_db.py
user-service/migrations/: env.py
user-service/migrations/versions/: a1ad8d26a3dc_added_user_table.py
user-service/models/: User.py
volumes/db/data/pgdata/: postmaster.pid
volumes/db/data/pgdata/base/1/: 1259  2619  2619_vm  2696  2840  2841
volumes/db/data/pgdata/base/16384/: 2619
volumes/db/data/pgdata/global/: 1260  1262  2671  pg_control
volumes/redis/data/: dump.rdb
volumes/user-db/data/pgdata/: postmaster.pid
volumes/user-db/data/pgdata/base/1/: 1259  2619  2619_vm  2696  2840  2841
volumes/user-db/data/pgdata/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  1259_vm  16385  16388  16394  16395  16401  2224  2579  2604  2606  2608  2610  2610_fsm  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002
volumes/user-db/data/pgdata/global/: 1260  1262  2671  pg_control
